src/test/ui/nll/user-annotations/adt-brace-enums.stderr
warning: type parameter on variant
  --> $DIR/adt-brace-enums.rs:21:28
   |
LL |     SomeEnum::SomeVariant::<_> { t: &c };
   |                            ^^^
   |
note: the lint level is defined here
  --> $DIR/adt-brace-enums.rs:1:9
   |
LL | #![warn(type_param_on_variant_ctor)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
help: set the type parameter on the enum
   |
LL |     SomeEnum::<_>::SomeVariant { t: &c };
   |             ^^^^^            --

warning: type parameter on variant
  --> $DIR/adt-brace-enums.rs:31:28
   |
LL |     SomeEnum::SomeVariant::<&u32> { t: &c };
   |                            ^^^^^^
   |
help: set the type parameter on the enum
   |
LL |     SomeEnum::<&u32>::SomeVariant { t: &c };
   |             ^^^^^^^^            --

warning: type parameter on variant
  --> $DIR/adt-brace-enums.rs:41:28
   |
LL |     SomeEnum::SomeVariant::<&'static u32> { t: &c };
   |                            ^^^^^^^^^^^^^^
   |
help: set the type parameter on the enum
   |
LL |     SomeEnum::<&'static u32>::SomeVariant { t: &c };
   |             ^^^^^^^^^^^^^^^^            --

warning: type parameter on variant
  --> $DIR/adt-brace-enums.rs:52:28
   |
LL |     SomeEnum::SomeVariant::<&'a u32> { t: &c };
   |                            ^^^^^^^^^
   |
help: set the type parameter on the enum
   |
LL |     SomeEnum::<&'a u32>::SomeVariant { t: &c };
   |             ^^^^^^^^^^^            --

warning: type parameter on variant
  --> $DIR/adt-brace-enums.rs:61:28
   |
LL |     SomeEnum::SomeVariant::<&'a u32> { t: c };
   |                            ^^^^^^^^^
   |
help: set the type parameter on the enum
   |
LL |     SomeEnum::<&'a u32>::SomeVariant { t: c };
   |             ^^^^^^^^^^^            --

warning: type parameter on variant
  --> $DIR/adt-brace-enums.rs:74:32
   |
LL |         SomeEnum::SomeVariant::<&'a u32> { t: &c };
   |                                ^^^^^^^^^
   |
help: set the type parameter on the enum
   |
LL |         SomeEnum::<&'a u32>::SomeVariant { t: &c };
   |                 ^^^^^^^^^^^            --

warning: type parameter on variant
  --> $DIR/adt-brace-enums.rs:87:32
   |
LL |         SomeEnum::SomeVariant::<&'a u32> { t: c };
   |                                ^^^^^^^^^
   |
help: set the type parameter on the enum
   |
LL |         SomeEnum::<&'a u32>::SomeVariant { t: c };
   |                 ^^^^^^^^^^^            --

error[E0597]: `c` does not live long enough
  --> $DIR/adt-brace-enums.rs:36:48
   |
LL |     SomeEnum::<&'static u32>::SomeVariant { t: &c };
   |                                                ^^
   |                                                |
   |                                                borrowed value does not live long enough
   |                                                requires that `c` is borrowed for `'static`
LL | }
   | - `c` dropped here while still borrowed

error[E0597]: `c` does not live long enough
  --> $DIR/adt-brace-enums.rs:41:48
   |
LL |     SomeEnum::SomeVariant::<&'static u32> { t: &c };
   |                                                ^^
   |                                                |
   |                                                borrowed value does not live long enough
   |                                                requires that `c` is borrowed for `'static`
LL |
LL | }
   | - `c` dropped here while still borrowed

error[E0597]: `c` does not live long enough
  --> $DIR/adt-brace-enums.rs:47:43
   |
LL | fn annot_reference_named_lifetime<'a>(_d: &'a u32) {
   |                                   -- lifetime `'a` defined here
LL |     let c = 66;
LL |     SomeEnum::<&'a u32>::SomeVariant { t: &c };
   |                                           ^^
   |                                           |
   |                                           borrowed value does not live long enough
   |                                           requires that `c` is borrowed for `'a`
LL | }
   | - `c` dropped here while still borrowed

error[E0597]: `c` does not live long enough
  --> $DIR/adt-brace-enums.rs:52:43
   |
LL | fn annot_reference_named_lifetime2<'a>(_d: &'a u32) {
   |                                    -- lifetime `'a` defined here
LL |     let c = 66;
LL |     SomeEnum::SomeVariant::<&'a u32> { t: &c };
   |                                           ^^
   |                                           |
   |                                           borrowed value does not live long enough
   |                                           requires that `c` is borrowed for `'a`
LL |
LL | }
   | - `c` dropped here while still borrowed

error[E0597]: `c` does not live long enough
  --> $DIR/adt-brace-enums.rs:67:47
   |
LL | fn annot_reference_named_lifetime_in_closure<'a>(_: &'a u32) {
   |                                              -- lifetime `'a` defined here
...
LL |         SomeEnum::<&'a u32>::SomeVariant { t: &c };
   |                                               ^^
   |                                               |
   |                                               borrowed value does not live long enough
   |                                               requires that `c` is borrowed for `'a`
LL |     };
   |     - `c` dropped here while still borrowed

error[E0597]: `c` does not live long enough
  --> $DIR/adt-brace-enums.rs:74:47
   |
LL | fn annot_reference_named_lifetime_in_closure2<'a>(_: &'a u32) {
   |                                               -- lifetime `'a` defined here
...
LL |         SomeEnum::SomeVariant::<&'a u32> { t: &c };
   |                                               ^^
   |                                               |
   |                                               borrowed value does not live long enough
   |                                               requires that `c` is borrowed for `'a`
LL |
LL |     };
   |     - `c` dropped here while still borrowed

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0597`.
